--- a/ChitalkaMVC/Views/Authors/Edit.cshtml
+++ b/ChitalkaMVC/Views/Authors/Edit.cshtml
@@ -4,23 +4,27 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 style="text-align:center">Edit</h1>
 
-<h4>Author</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div >
+    <div style="width:50%;margin-left:25%;margin-top:3%;">
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Author.Id" />
             <input type="hidden" asp-for="Author.ImagePath" />
             <div class="form-group">
-                @await Component.InvokeAsync("ListCountries", new { aspFor = "Author.CountryId", countryId = Model.Author.CountryId })
+                <div style="margin-left:35%;">
+                    @await Component.InvokeAsync("ListCountries", new { aspFor = "Author.CountryId", countryId = Model.Author.CountryId })
+                </div>
+                <br />
+                
                 <label asp-for="Author.Name" class="control-label"></label>
                 <input required asp-for="Author.Name" class="form-control" />
                 <span asp-validation-for="Author.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <br /><br />
                 <label asp-for="Image" class="control-label"></label>
                 <input asp-for="Image" accept="image/*" />
                 <span asp-validation-for="Image" class="text-danger"></span>
@@ -28,17 +32,24 @@
             <div>
                     <img style="height: 225px; width: 225px" src=@Model.Author.ImagePath asp-append-version="true" />
             </div>
-            <div class="form-group">
+            <br /><br />
+            <div class="form-group" style="margin-left:45%;">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div style="margin-left:47%;margin-top:5%">
     <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<style>
+select{
+    width:200px;
+}
+    
+</style>
