--- a/ChitalkaMVC/Views/Authors/Index.cshtml
+++ b/ChitalkaMVC/Views/Authors/Index.cshtml
@@ -4,12 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>All Authors:</h1>
+<h1 style="text-align:center">All Authors:</h1>
 
-<p>
+<p style="text-align:center">
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<div style="width:80%;margin-left:10%;">
+    <table class="table">
     <thead>
         <tr>
             <th>
@@ -50,3 +51,4 @@
 }
     </tbody>
 </table>
+</div>
