--- a/ChitalkaMVC/Views/Books/Index.cshtml
+++ b/ChitalkaMVC/Views/Books/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>All Books:</h1>
+<h1 style="text-align:center">All Books:</h1>
 
-<p>
+<p style="text-align:center">
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" style="width:80%;margin-left:10%">
     <thead>
         <tr>
             <th>
