--- a/ChitalkaMVC/Views/Countries/Index.cshtml
+++ b/ChitalkaMVC/Views/Countries/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IList<ChitalkaMVC.Storage.Entities.Country>
 
-<h1>All Countries:</h1>
-<p>
+<h1 style="text-align:center">All Countries:</h1>
+<p style="text-align:center">
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<div style="width:80%;margin-left:10%;">
+    <table class="table">
     <thead>
         <tr>
             <th>
@@ -33,3 +34,5 @@
 }
     </tbody>
 </table>
+</div>
+
