--- a/ChitalkaMVC/Views/Genres/Edit.cshtml
+++ b/ChitalkaMVC/Views/Genres/Edit.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 style="text-align:center">Edit</h1>
 
-<h4>Genre</h4>
+
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div >
+    <div style="width:50%;margin-left:25%;margin-top:3%;height:380px;">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -18,14 +18,14 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="margin-left:45%;margin-top:5%;">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div style="margin-left:47%;margin-top:-5%;">
     <a asp-action="Index">Back to List</a>
 </div>
 
