--- a/ChitalkaMVC/Views/Home/Index.cshtml
+++ b/ChitalkaMVC/Views/Home/Index.cshtml
@@ -12,4 +12,10 @@
         <div class="col-6"><a class="h3" style="text-decoration:none;" asp-controller="Authors" asp-action="List">Authors</a></div>
         
     </div>
+    <br />
+    <h2 class="display-5">Created with love and vodka</h2>
+    <h2 class="display-5">HAKUNA MA VODKA, comrades</h2>
+    <br />
+    <img style="margin-left:5%;" src="Images/VODKA.png"/>
+    <br />
 </div>
