--- a/ChitalkaMVC/Views/Users/Password.cshtml
+++ b/ChitalkaMVC/Views/Users/Password.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewData["Title"] = "Manage";
 }
-<h4>New Password</h4>
+<h4 style="text-align:center">New Password</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div style="margin:auto;display:block" class="col-md-4">
         <form asp-action="Password">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -26,7 +26,7 @@
                 <label class="control-label">@Model.Result</label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Submit" class="btn btn-primary" />
+                <input style="margin:auto;display:block" type="submit" value="Submit" class="btn btn-primary" />
             </div>
         </form>
     </div>
