--- a/ChitalkaMVC/Views/Authors/Delete.cshtml
+++ b/ChitalkaMVC/Views/Authors/Delete.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 style="text-align:center">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
+
+<div style="width:50%;margin-left:25%;margin-top:3%">
     <h4>Author</h4>
     <hr />
     <dl class="row">
@@ -37,7 +37,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete" style="margin-left:40%;margin-top:40px;">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
