--- a/ChitalkaMVC/Views/Authors/List.cshtml
+++ b/ChitalkaMVC/Views/Authors/List.cshtml
@@ -2,12 +2,23 @@
 @{
     ViewData["Title"] = "Authors";
 }
-<div class="row" style="border-bottom: 2px solid rgba(0, 0, 0, 0.125);">
-    <form asp-action="List">
-        <input asp-for="Options.AuthorName" placeholder="Search by name" />
-        <input style="width:330px;" asp-for="Options.Countries" placeholder="Search by countries (Country1;Country2;...)" />
-       <input type="submit" value="Search" class="btn btn-primary" />
+
+
+<button class="btn btn-danger" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="margin-left:45%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!Search!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
+
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas-header">
+    <h5 id="offcanvasRightLabel">!Search!</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
+  </div>
+  <div class="offcanvas-body">
+   <form asp-action="List">
+        <input style="width:330px;margin-bottom:15px;" asp-for="Options.AuthorName" placeholder="Search by name" />
+        
+        <input style="width:330px;margin-bottom:15px" asp-for="Options.Countries" placeholder="Search by countries (Country1;Country2;...)" />
+       <input style="margin-left:40%" type="submit" value="Search" class="btn btn-primary" />
     </form>
+  </div>
 </div>
 
 <div class="row" style="margin-left:6%;margin-right:0%;margin-top:2%;">
@@ -15,7 +26,7 @@
 
     foreach (var item in Model.Authors)
     {
-        <div class="card" style="width: 20%;margin:1.5%;height:350px;">
+        <div class="card" style="width: 240px;margin:1.5%;height:350px;">
             <img src=@item.ImagePath class="card-img-top" style="width: 100%;height:65%;" asp-append-version="true">
             <div class="card-body">
                 <a asp-action="Details" asp-route-id="@item.Id" class="nav-link">@Html.DisplayFor(modelItem => item.Name)</a>
