--- a/ChitalkaMVC/Views/Books/Create.cshtml
+++ b/ChitalkaMVC/Views/Books/Create.cshtml
@@ -1,38 +1,56 @@
 ﻿@model ChitalkaMVC.Models.BookViewModel
-<h4>New Book</h4>
+<h4 style="text-align:center">New Book</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div >
+    <div style="width:80%;margin-left:10%">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                @await Component.InvokeAsync("ListAuthors", new{aspFor="Book.AuthorId", authorId=0})
-                @await Component.InvokeAsync("ListCenturies", new{aspFor="Book.CenturyId", centuryId=0})
-                 @await Component.InvokeAsync("ListGenres", new{aspFor="GenreIds", selectedGenres=new int[]{0}})
+            <div class="form-group" style="margin-left:0%;">
+                <div style="margin-left:10%;margin-top:5%;">
+                     @await Component.InvokeAsync("ListAuthors", new{aspFor="Book.AuthorId", authorId=0})
+                </div>
+               <div style="margin-left:45%;margin-top:-2%;">
+                   @await Component.InvokeAsync("ListCenturies", new{aspFor="Book.CenturyId", centuryId=0})
+               </div>
+               <div style="margin-left:80%;margin-top:-5%;">
+                   @await Component.InvokeAsync("ListGenres", new{aspFor="GenreIds", selectedGenres=new int[]{0}})
+               </div>
+               
+                 
                  <input hidden asp-for="Book.ImagePath" value="placeholder" class="form-control" />
                 <label asp-for="Book.Name" class="control-label"></label>
                 <input required asp-for="Book.Name" class="form-control" />
+                
                 <span asp-validation-for="Book.Name" class="text-danger"></span>
+                <br />
                 <label asp-for="Book.Description" class="control-label"></label>
                 <textarea required style="resize: none;" asp-for="Book.Description" class="form-control"></textarea>
                 <span asp-validation-for="Book.Description" class="text-danger"></span>
+                <br />
                 <label asp-for="Book.Text" class="control-label"></label>
-                <textarea required rows="10" style="resize: none;" asp-for="Book.Text" class="form-control"></textarea>
+                <textarea  rows="10" asp-for="Book.Text" class="form-control"></textarea>
                 <span asp-validation-for="Book.Text" class="text-danger"></span>
+                <br />
                 <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Book.Visibility" /> @Html.DisplayNameFor(model => model.Book.Visibility)
                 </label>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
                 <input asp-for="Image" accept="image/*" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             </div>
+            <br /><br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+
+<style>
+    select{width:150px;}
+</style>
