--- a/ChitalkaMVC/Views/Books/Delete.cshtml
+++ b/ChitalkaMVC/Views/Books/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 style="text-align:center">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Book</h4>
+
+<div style="width:80%;margin-left:10%">
+    <h4 >Book</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -63,7 +63,7 @@
                     }</dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete" style="margin-left:45%;margin-top:5%;">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
