--- a/ChitalkaMVC/Views/Books/Details.cshtml
+++ b/ChitalkaMVC/Views/Books/Details.cshtml
@@ -3,27 +3,36 @@
 @{
     ViewData["Title"] = Model.Name;
 }
-
-<h2>@Model.Name</h2>
-<div>
-    <img src=@Model.ImagePath asp-append-version="true" style="width:50%;height:70%;"/>
-    <h5>Author: <a asp-controller="Authors" asp-action="Details" asp-route-id="@Model.AuthorId" style="text-decoration:none;">@Model.Author.Name</a></h5>
-    <h5>
-        Genres:
-        @foreach(var genre in Model.Genres)
-        {
-            <d>
-                 @genre.Name
-            </d>
-        }
-    </h5>
-    <h5>Century: @Model.Century.Name</h5>
-    <p>
+    <div style="background:#C0C0C0;height:auto;margin-top:-20px;width:100%">
+    <div style="text-align:center">
+        <img src=@Model.ImagePath asp-append-version="true" style="margin-top:5%;margin-bottom:5%;"/>
+    </div>
+    </div>
+    <h2 style="height:100px;background:#DCDCDC;text-align: center;width:100%;padding-top:3%;">@Model.Name</h2>
+    <div style="margin-left:35%;">
+        <ul class="list-group list-group-horizontal" style="text-align:center">
+      <li class="list-group-item">Author : <a asp-controller="Authors" asp-action="Details" asp-route-id="@Model.AuthorId" style="text-decoration:none;">@Model.Author.Name</a></li>
+      <li class="list-group-item">Genre :  @foreach(var genre in Model.Genres)
+            {
+                <d>
+                     @genre.Name
+                </d>
+            }</li>
+      <li class="list-group-item">Century: @Model.Century.Name</li>
+    </ul>
+    <div style="margin-left:18%;margin-top:3%;">
+        @await Component.InvokeAsync("FavouriteBook", Model.Id)
+    </div>
+    
+    </div>
+    
+    <div style="height:200px;overflow:scroll;margin-top:5%;width:50%;margin-left:25%">
         @Model.Description
-    </p>
-    <h5>Sample Text: </h5>
-    <p>
+    </div>
+    <hr />
+    <div style="height:600px;overflow:scroll;margin-top:5%;width:80%;margin-left:10%">
         @Model.Text
-    </p>
-    @await Component.InvokeAsync("FavouriteBook", Model.Id)
-</div>
+    </div>
+
+    
+    
