--- a/ChitalkaMVC/Views/Centuries/Delete.cshtml
+++ b/ChitalkaMVC/Views/Centuries/Delete.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 style="text-align:center">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
+<div style="text-align:center">
     <h4>Century</h4>
     <hr />
     <dl class="row">
