--- a/ChitalkaMVC/Views/Centuries/Index.cshtml
+++ b/ChitalkaMVC/Views/Centuries/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IList<ChitalkaMVC.Storage.Entities.Century>
 
-<h1>All Centuries:</h1>
-<p>
+<h1 style="text-align:center">All Centuries:</h1>
+<p style="text-align:center">
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" style="width:80%;margin-left:10%;">
     <thead>
         <tr>
             <th>
