--- a/ChitalkaMVC/Views/Countries/Create.cshtml
+++ b/ChitalkaMVC/Views/Countries/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@model ChitalkaMVC.Storage.Entities.Country
-<h4>New Country</h4>
+<h4  style="text-align:center">New Country</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div >
+    <div style="width:50%;margin-left:25%;margin-top:3%;height:380px;">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -10,7 +10,7 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="margin-left:45%;margin-top:5%;">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
