--- a/ChitalkaMVC/Views/Home/Privacy.cshtml
+++ b/ChitalkaMVC/Views/Home/Privacy.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 style="text-align:center">@ViewData["Title"]</h1>
 
 @*<p>Use this page to detail your site's privacy policy.</p>*@
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhealthchoiceone.com%2Fwp-content%2Fuploads%2F2015%2F10%2Fprivacy_toilet_paper.jpg&f=1&nofb=1/" >
+<div style="text-align:center;margin-top:5%;">
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhealthchoiceone.com%2Fwp-content%2Fuploads%2F2015%2F10%2Fprivacy_toilet_paper.jpg&f=1&nofb=1/" >
+</div>
