--- a/ChitalkaMVC/Views/Notes/Delete.cshtml
+++ b/ChitalkaMVC/Views/Notes/Delete.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 style="text-align:center">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
+<h3 style="text-align:center">Are you sure you want to delete this?</h3>
+<div style="margin-left:2%;">
     <h4>Note</h4>
     <hr />
     <dl class="row">
