--- a/ChitalkaMVC/Views/Users/Login.cshtml
+++ b/ChitalkaMVC/Views/Users/Login.cshtml
@@ -2,18 +2,18 @@
 @{
     ViewData["Title"] = "Log In";
 }
-<h4>User</h4>
+<h4 style="text-align:center;">Your User</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div style="height:350px;">
+    <div style="margin-left:25%;margin-right:25%;">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group" style="margin-top:5%;">
                 <label asp-for="User.Username" class="control-label"></label>
                 <input required asp-for="User.Username" class="form-control" />
                 <span asp-validation-for="User.Username" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="margin-top:5%;">
                 <label asp-for="User.Password" class="control-label"></label>
                 <input required type="password" asp-for="User.Password" class="form-control" />
                 <span asp-validation-for="User.Password" class="text-danger"></span>
@@ -21,10 +21,13 @@
             <div class="form-group">
                 <label class="control-label">@Model.Result</label>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Log In" class="btn btn-primary" />
+            <div class="form-group" style="margin-top:5%;">
+                <input type="submit" style="margin:auto;display:block;width:130px" value="Log In" class="btn btn-primary" />
             </div>
         </form>
-        <a asp-action="PasswordReset">Reset password</a>
+        <div style="margin:auto;display:block;width:110px">
+            <a asp-action="PasswordReset">Reset password</a>
+        </div>
+        
     </div>
 </div>
