--- a/ChitalkaMVC/Views/Users/Logout.cshtml
+++ b/ChitalkaMVC/Views/Users/Logout.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Logout";
 }
-<h4>Are you sure you want to log out?</h4>
+<h4 style="text-align:center">Are you sure you want to log out?</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div style="height:300px;">
+    <div style="margin-left:25%;margin-right:25%;">
         <form asp-action="LogoutConfirmed">
-            <div class="form-group">
-                <input type="submit" value="Log out" class="btn btn-primary" />
+            <div class="form-group" style="margin-top:15%;">
+                <input type="submit" style="margin:auto;display:block;width:130px" value="Log out" class="btn btn-primary" />
             </div>
         </form>
     </div>
