--- a/ChitalkaMVC/Views/Users/Mail.cshtml
+++ b/ChitalkaMVC/Views/Users/Mail.cshtml
@@ -5,7 +5,7 @@
 <h4>Mail Verification</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div style="margin:auto;display:block" class="col-md-4">
         <form asp-action="Mail">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -25,13 +25,13 @@
             <div class="form-group">
                 @if (Model.Email != null)
                 {
-                    <label asp-for="ConfirmationCode" class="control-label"></label>
+                    <label class="control-label">Confirmation Code</label>
                     <input required asp-for="ConfirmationCode" class="form-control" />
                     <span asp-validation-for="ConfirmationCode" class="text-danger"></span>
                 }
                 else
                 {
-                    <label asp-for="ConfirmationCode" class="control-label"></label>
+                    <label class="control-label">Confirmation Code</label>
                     <input disabled asp-for="ConfirmationCode" class="form-control" />
                     <span asp-validation-for="ConfirmationCode" class="text-danger"></span>
                 }
@@ -40,7 +40,7 @@
                 <label class="control-label">@Model.Result</label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Submit" class="btn btn-primary" />
+                <input style="margin:auto;display:block" type="submit" value="Submit" class="btn btn-primary" />
             </div>
         </form>
     </div>
