--- a/ChitalkaMVC/Views/Users/Manage.cshtml
+++ b/ChitalkaMVC/Views/Users/Manage.cshtml
@@ -2,16 +2,16 @@
 @{
     ViewData["Title"] = "Profile";
 }
-<h5>Username: @Model.Username</h5>
-<h5>Mail: 
+<h5 style="text-align:center">Username: @Model.Username</h5>
+<h5 style="text-align:center">Mail: 
 @{
     if (Model.Mail == null)
     {
-        <a asp-action="Mail" class="btn btn-primary">Validate Mail</a>
+        <a style="margin:auto;display:block;width:170px" asp-action="Mail" class="btn btn-primary">Validate Mail</a>
     }
     else
     {
         @Model.Mail  <a asp-action="Mail" class="btn btn-primary">Change Mail</a>
     }
 }</h5>
-<a asp-action="Password" class="btn btn-danger">Change Password</a>
+<a style="margin:auto;display:block;width:170px" asp-action="Password" class="btn btn-danger">Change Password</a>
