--- a/ChitalkaMVC/Views/Users/Register.cshtml
+++ b/ChitalkaMVC/Views/Users/Register.cshtml
@@ -2,18 +2,19 @@
 @{
     ViewData["Title"] = "Register";
 }
-<h4>User</h4>
+<h4 style="text-align:center;">Create your User</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div style="height:350px;">
+    <div style="margin-left:25%;margin-right:25%;">
+        
         <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group" style="margin-top:5%;">
                 <label asp-for="User.Username" class="control-label"></label>
                 <input required asp-for="User.Username" class="form-control" />
                 <span asp-validation-for="User.Username" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="margin-top:5%;">
                 <label asp-for="User.Password" class="control-label"></label>
                 <input required type="password" asp-for="User.Password" class="form-control" />
                 <span asp-validation-for="User.Password" class="text-danger"></span>
@@ -21,8 +22,8 @@
             <div class="form-group">
                 <label class="control-label">@Model.Result</label>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Register" class="btn btn-primary" />
+            <div class="form-group" style="margin-top:5%;">
+                <input type="submit" style="margin:auto;display:block;width:130px" value="Register" class="btn btn-primary" />
             </div>
         </form>
     </div>
