--- a/ChitalkaMVC/Views/Users/PasswordReset.cshtml
+++ b/ChitalkaMVC/Views/Users/PasswordReset.cshtml
@@ -31,12 +31,12 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
-                    <input required asp-for="Password" class="form-control" />
+                    <input required type="password" asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Confirm Password</label>
-                    <input required asp-for="ConfirmPassword" class="form-control" />
+                    <input required type="password" asp-for="ConfirmPassword" class="form-control" />
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
             }
